--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -287,7 +287,12 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="row" id="xviz"></div>
+                    <div class="row" id="xviz">
+                        <div class="col" id="yviz">
+                            <style><!-- render model css is injected here --></style>
+                            <div id="dataviz-result"><!--code is injected here --></div>
+                        </div>
+                    </div>
                     <form class="form" id="dataviz-form" role="form" autocomplete="off">
                         <div class="form-group row">
                             <div class="col">
